--- a/src/templates/gateway_details.html
+++ b/src/templates/gateway_details.html
@@ -38,11 +38,46 @@
                 <div class="count-indicator">
                   <span class="menu-icon"><i class="fa fa-user"></i></span>                
                 </div>
-                <div class="profile-name">
-                  <h5 class="mb-0 font-weight-normal">Admin</h5>
-                  <span>admin</span>
-                </div>
-              </div>              
+                 <div class="profile-name">
+                      <h5 class="mb-0 font-weight-normal">{{name}}</h5>
+                      <span>{{username}}</span>
+                    </div>
+              </div> 
+              <a href="#" id="profile-dropdown" data-bs-toggle="dropdown"><i class="mdi mdi-dots-vertical"></i></a>
+              <div class="dropdown-menu dropdown-menu-right sidebar-dropdown preview-list" aria-labelledby="profile-dropdown">
+                <a href="#" class="dropdown-item preview-item">
+                  <div class="preview-thumbnail">
+                    <div class="preview-icon bg-dark rounded-circle">
+                      <i class="mdi mdi-cog text-primary"></i>
+                    </div>
+                  </div>
+                  <div class="preview-item-content">
+                    <p class="preview-subject ellipsis mb-1 text-small">Account settings</p>
+                  </div>
+                </a>
+                <div class="dropdown-divider"></div>
+                <a href="#" class="dropdown-item preview-item">
+                  <div class="preview-thumbnail">
+                    <div class="preview-icon bg-dark rounded-circle">
+                      <i class="mdi mdi-onepassword  text-info"></i>
+                    </div>
+                  </div>
+                  <div class="preview-item-content">
+                    <p class="preview-subject ellipsis mb-1 text-small">Change Password</p>
+                  </div>
+                </a>
+                <div class="dropdown-divider"></div>
+                <a href="/user_registration" class="dropdown-item preview-item">
+                  <div class="preview-thumbnail">
+                    <div class="preview-icon bg-dark rounded-circle">
+                      <i class="fa fa-plus text-success"></i>
+                    </div>
+                  </div>
+                  <div class="preview-item-content">
+                    <p class="preview-subject ellipsis mb-1 text-small">Add User</p>
+                  </div>
+                </a>
+              </div>
             </div>
           </li>
           <li class="nav-item nav-category">
@@ -86,6 +121,14 @@
                 <i class="mdi mdi-playlist-play"></i>
               </span>
               <span class="menu-title">Device List</span>
+            </a>
+          </li>
+          <li class="nav-item menu-items">
+            <a class="nav-link" href="/config_details">
+              <span class="menu-icon">
+                <i class="fa fa-gears"></i>
+              </span>
+              <span class="menu-title">Configuration</span>
             </a>
           </li>
         </ul>
