--- a/src/templates/user_reg.html
+++ b/src/templates/user_reg.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Device Registration</title>
+    <title>User Registration</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../static/assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="../static/assets/vendors/ti-icons/css/themify-icons.css">
@@ -145,50 +145,46 @@
         <div class="main-panel">
           <div class="content-wrapper">
             <div class="page-header">
-              <h3 class="page-title"> Device Registration </h3>
+              <h3 class="page-title"> User Registration </h3>
             </div>
             <div class="row">
               <div class="col-md-3"></div>
               <div class="col-md-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Device Form</h4>
-                    <p class="card-description"> Enter Device Details: </p>
+                    <h4 class="card-title">User Form</h4>
+                    <p class="card-description"> Enter User Details: </p>
                     <br>
-                    <form class="forms-sample" action="/device_registration" method="POST">
-                      <div class="form-group row">
-                        <label for="name" class="col-sm-3 col-form-label">Device Name: <span class="text-danger">*</span></label>
-                        <div class="col-sm-9">
-                          <input name="name" type="text" class="form-control" id="name" placeholder="Custom Name of Device" required>
-                        </div>
+                    <form action="/user_registration" method="POST">
+                      <div class="form-group">
+                          <label>Name *</label>
+                          <input type="text" class="form-control p_input" name="name" required>
                       </div>
-                      <div class="form-group row">
-                        <label for="eui" class="col-sm-3 col-form-label">Device Eui: <span class="text-danger">*</span></label>
-                        <div class="col-sm-9">
-                          <input name="eui" type="text" class="form-control" id="eui" placeholder="Unique EUI of Device" required>
-                        </div>
+                      <div class="form-group">
+                        <label>Email</label>
+                        <input type="email" class="form-control p_input" name="email">
                       </div>
-                      <div class="form-group row">
-                        <label for="dev_gw" class="col-sm-3 col-form-label">Device Gateway:</label>
-                        <div class="col-sm-9">
-                          <input name="dev_gw" type="text" class="form-control" id="dev_gw" placeholder="Gateway of Device">
-                        </div>
+                      <div class="form-group">
+                          <label>Mobile No.</label>
+                          <input type="text" class="form-control p_input" name="mob">
                       </div>
-                      <div class="form-group row">
-                        <label for="address" class="col-sm-3 col-form-label">Device Addr:</label>
-                        <div class="col-sm-9">
-                          <input name="address" type="text" class="form-control" id="address" placeholder="Device Address assigned by Chirpstack">
-                        </div>
+                      <div class="form-group">
+                        <label>Username *</label>
+                        <input type="text" class="form-control p_input" name="username" required>
                       </div>
-                      <div class="form-group row">
-                        <label for="dev_up" class="col-sm-3 col-form-label">Uplink Interval:</label>
-                        <div class="col-sm-9">
-                          <input name="dev_up" type="text" class="form-control" id="dev_up" placeholder="Uplink Interval in seconds">
-                        </div>
+                      <div class="form-group">
+                        <label>Password *</label>
+                        <input type="password" class="form-control p_input" name="password" required>
                       </div>
-                      <input type="hidden" id="csrf_token" name="csrf_token">
-                      <button type="submit" class="btn btn-primary me-2 float-end">Submit</button>
-                    </form>
+                      <div class="form-group">
+                        <label>Retype Password *</label>
+                        <input type="password" class="form-control p_input" name="re-password" required>
+                      </div>
+                      <div class="text-center d-grid gap-2">
+                        <input type="hidden" id="csrf_token" name="csrf_token">
+                        <button type="submit" class="btn btn-primary btn-block enter-btn">Submit</button>
+                      </div>
+                  </form>
                   </div>
                 </div>
                 <div class="col-md-3"></div>
@@ -216,6 +212,5 @@
    <!-- End plugin js for this page -->
    <script src="../static/js/misc.js"></script>
    <script src="../static/js/off-canvas.js"></script>
-
   </body>
   </html>
