--- a/src/templates/gateways_list.html
+++ b/src/templates/gateways_list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gateways</title>
+    <title>Argus</title>
     <link rel="stylesheet" href="../static/css/gateway_list.css">
 	<!-- plugins:css -->
     <link rel="stylesheet" href="../static/assets/vendors/mdi/css/materialdesignicons.min.css">
