--- a/src/templates/error-500.html
+++ b/src/templates/error-500.html
@@ -20,16 +20,16 @@
   <body>
     <div class="container-scroller">
       <div class="container-fluid page-body-wrapper full-page-wrapper">
-        <div class="content-wrapper d-flex align-items-center text-center error-page bg-primary">
+        <div class="content-wrapper d-flex align-items-center text-center error-page bg-info">
           <div class="row flex-grow">
             <div class="col-lg-7 mx-auto text-white">
               <div class="row align-items-center d-flex flex-row">
                 <div class="col-lg-6 text-lg-right pr-lg-4">
-                  <h1 class="display-1 mb-0">404</h1>
+                  <h1 class="display-1 mb-0">500</h1>
                 </div>
                 <div class="col-lg-6 error-page-divider text-lg-left pl-lg-4">
                   <h2>SORRY!</h2>
-                  <h3 class="font-weight-light">The page you’re looking for was not found.</h3>
+                  <h3 class="font-weight-light">Internal server error!</h3>
                 </div>
               </div>
               <div class="row mt-5">
@@ -39,6 +39,7 @@
               </div>
               <div class="row mt-5">
                 <div class="col-12 mt-xl-2">
+                  <p class="text-white font-weight-medium text-center">Copyright &copy; 2018 All rights reserved.</p>
                 </div>
               </div>
             </div>
@@ -50,8 +51,7 @@
     </div>
     <!-- container-scroller -->
     <!-- plugins:js -->
-    <!-- plugins:js -->
-   <script src="../static/assets/vendors/js/vendor.bundle.base.js"></script>
+    <script src="../static/assets/vendors/js/vendor.bundle.base.js"></script>
    <!-- endinject -->
    <!-- Plugin js for this page -->
    <script src="../static/assets/vendors/chart.js/chart.umd.js"></script>
@@ -59,5 +59,6 @@
    <!-- End plugin js for this page -->
    <script src="../static/js/misc.js"></script>
    <script src="../static/js/off-canvas.js"></script>
+    <!-- endinject -->
   </body>
 </html>
