--- a/src/templates/config_details.html
+++ b/src/templates/config_details.html
@@ -203,10 +203,10 @@
                       <div class="form-group row">
                         <label for="rabbitmq-server" class="col-3 col-form-label">RabbitMQ Server: </label>
                         <div class="col-5">
-                          <input name="rabbtimq-ip" type="text" class="form-control" id="rabbtimq-server" placeholder="IP Address" value="{{ rabbitmq_status['ip'] }}">
+                          <input name="rabbitmq-ip" type="text" class="form-control" id="rabbtimq-server" placeholder="IP Address" value="{{ rabbitmq_status['ip'] }}">
                         </div>
                         <div class="col-2">
-                          <input name="rabbtimq-port" type="text" class="form-control" id="rabbtimq-server" placeholder="Port" value="{{ rabbitmq_status['port'] }}">
+                          <input name="rabbitmq-port" type="text" class="form-control" id="rabbtimq-server" placeholder="Port" value="{{ rabbitmq_status['port'] }}">
                         </div>
                       </div>
                       <input type="hidden" id="csrf_token" name="csrf_token">
