--- a/src/templates/device_reg.html
+++ b/src/templates/device_reg.html
@@ -135,7 +135,7 @@
             <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
               <span class="mdi mdi-menu"></span>
             </button>
-            <h1 class="title align-self-center">ARGUS IoT SENTINEL</h1>
+            <p class="title align-self-center">ARGUS IoT SENTINEL</p>
             <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
               <span class="mdi mdi-format-line-spacing"></span>
             </button>
