--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -17,9 +17,23 @@
     <!-- End layout styles -->
   </head>
   <body>
-    <div class="container-scroller">
+    <script>
+      // Get flashed messages from Flask and pass to JavaScript
+      {% with messages = get_flashed_messages() %}
+        {% if messages %}
+          const banner_alert = "{{ messages[0] }}";  // Assign first flashed message to JS variable
+        {% endif %}
+      {% endwith %}
+    </script>
+      <div class="container-scroller">
+        <div class="row p-0 m-0 proBanner" id="proBanner">
+        </div>
         <div class="container-fluid page-body-wrapper full-page-wrapper">
-          <div class="row w-100" style="margin: 0px;">
+          <div class="preshnam row w-100">
+            <div class="image-container">
+              <img src="../static/assets/images/eye.png" alt="Eye Image">
+              <span class="blink-text">Argus IoT Sentinel</span>
+            </div>
             <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
               <div class="card col-lg-4 mx-auto login-card">
                 <div class="card-body px-5 py-5">
