--- a/src/templates/gateways_list.html
+++ b/src/templates/gateways_list.html
@@ -154,6 +154,7 @@
 						<div class="header__item"><a id="wins" class="filter__link filter__link--number" href="#">EUI</a></div>
 						<div class="header__item"><a id="draws" class="filter__link filter__link--number" href="#">Address</a></div>
 						<div class="header__item"><a id="losses" class="filter__link filter__link--number" href="#">Sim Number</a></div>
+            <div class="header__item"><a id="losses" class="filter__link filter__link--number" href="#">Coordinates</a></div>
 					</div>
 					<div class="table-content">	
 					</div>	
