--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -282,9 +282,12 @@
             </div>
             <br><br>
             <div class="page-header">
-              <h3 class="page-title">Alerts</h3>
+              <h3 class="page-title">Gateway Alerts</h3>
             </div>
             <div class="row" id="dynamic-rows1">
+            </div>
+            <div class="page-header">
+              <h3 class="page-title">Device Alerts</h3>
             </div>
             <div class="row" id="dynamic-rows2">
             </div>
