--- a/src/templates/device_reg.html
+++ b/src/templates/device_reg.html
@@ -169,9 +169,9 @@
                         </div>
                       </div>
                       <div class="form-group row">
-                        <label for="dev_gw" class="col-sm-3 col-form-label">Device Gateway:</label>
+                        <label for="dev_gw" class="col-sm-3 col-form-label">Device Gateway ID:</label>
                         <div class="col-sm-9">
-                          <input name="dev_gw" type="text" class="form-control" id="dev_gw" placeholder="Gateway of Device">
+                          <input name="dev_gw" type="text" class="form-control" id="dev_gw" placeholder="Gateway ID of Device">
                         </div>
                       </div>
                       <div class="form-group row">
