--- a/src/templates/device_details.html
+++ b/src/templates/device_details.html
@@ -6,6 +6,7 @@
     <title>Argus</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/device_details.css">
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../static/assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="../static/assets/vendors/ti-icons/css/themify-icons.css">
@@ -16,9 +17,28 @@
     <!-- Layout styles -->
     <link rel="stylesheet" href="../static/css/style.css">
     <!-- End layout styles -->
+    <!--Icons-->
+    <link rel="apple-touch-icon" sizes="57x57" href="../static/assets/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../static/assets/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../static/assets/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../static/assets/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../static/assets/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../static/assets/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../static/assets/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../static/assets/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../static/assets/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="../static/assets/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../static/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../static/assets/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../static/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../static/assets/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="../static/assets/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   <script>
+     const deviceUid = "{{ uid }}";
     const alerts = {{ dev_alerts|tojson }};
   </script>
     <div class="container-scroller">
@@ -44,7 +64,7 @@
               </div> 
               <a href="#" id="profile-dropdown" data-bs-toggle="dropdown"><i class="mdi mdi-dots-vertical"></i></a>
               <div class="dropdown-menu dropdown-menu-right sidebar-dropdown preview-list" aria-labelledby="profile-dropdown">
-                <a href="#" class="dropdown-item preview-item">
+                <a href="/account_settings" class="dropdown-item preview-item">
                   <div class="preview-thumbnail">
                     <div class="preview-icon bg-dark rounded-circle">
                       <i class="mdi mdi-cog text-primary"></i>
@@ -174,6 +194,32 @@
                 </div>
               </div>
             </div>
+            <div class="container">
+              <div id="rxPacketsCard" class="card">
+                  <div class="card-header">Received Packets</div>
+                  <div class="card-body" id="rxPackets"></div>
+              </div>
+              <div id="rssiCard" class="card">
+                  <div class="card-header">RSSI</div>
+                  <div class="card-body" id="rssi"></div>
+              </div>
+              <div id="snrCard" class="card">
+                  <div class="card-header">SNR</div>
+                  <div class="card-body" id="snr"></div>
+              </div>
+              <div id="rxPacketsPerFreqCard" class="card">
+                  <div class="card-header">Received / Frequency</div>
+                  <div class="card-body" id="rxPacketsPerFreq"></div>
+              </div>
+              <div id="rxPacketsPerDrCard" class="card">
+                  <div class="card-header">Received / DR</div>
+                  <div class="card-body" id="rxPacketsPerDr"></div>
+              </div>
+              <div id="errorCard" class="card">
+                  <div class="card-header">Errors</div>
+                  <div class="card-body" id="errors"></div>
+              </div>
+          </div>
             
           </div>
           <!-- content-wrapper ends -->
@@ -200,5 +246,7 @@
    <script src="../static/js/misc.js"></script>
    <script src="../static/js/off-canvas.js"></script>
    <script src="../static/js/device_alerts.js"></script>
+   <script src="../static/js/device_charts.js"></script>
+
 </body>
 </html>
