--- a/src/templates/config_details.html
+++ b/src/templates/config_details.html
@@ -35,17 +35,9 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-  <script>
-    // Get flashed messages from Flask and pass to JavaScript
-    {% with messages = get_flashed_messages() %}
-      {% if messages %}
-        const banner_alert = "{{ messages[0] }}";  // Assign first flashed message to JS variable
-      {% endif %}
-    {% endwith %}
-</script>
-    <div class="container-scroller">
-      <div class="row p-0 m-0 proBanner" id="proBanner">
-      </div>
+  <div id="flash-message" data-message="{{ get_flashed_messages()[0] if get_flashed_messages() else '' }}"></div>
+  <div class="container-scroller">
+      <div class="row p-0 m-0 proBanner" id="proBanner"></div>
       <!-- partial:partials/_sidebar.html -->
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <div class="sidebar-brand-wrapper d-none d-lg-flex align-items-center fixed-top">
@@ -55,54 +47,54 @@
           
         </div>
         <ul class="nav">
-            <li class="nav-item profile">
-                <div class="profile-desc">
-                  <div class="profile-pic">
-                    <div class="count-indicator">
-                      <span class="menu-icon"><i class="fa fa-user"></i></span>                
-                    </div>
-                    <div class="profile-name">
+          <li class="nav-item profile">
+            <div class="profile-desc">
+              <div class="profile-pic">
+                <div class="count-indicator">
+                  <span class="menu-icon"><i class="fa fa-user"></i></span>                
+                </div>
+                 <div class="profile-name">
                       <h5 class="mb-0 font-weight-normal">{{name}}</h5>
                       <span>{{username}}</span>
-                    </div>
-                  </div> 
-                  <a href="#" id="profile-dropdown" data-bs-toggle="dropdown"><i class="mdi mdi-dots-vertical"></i></a>
-                  <div class="dropdown-menu dropdown-menu-right sidebar-dropdown preview-list" aria-labelledby="profile-dropdown">
-                    <a href="/account_settings" class="dropdown-item preview-item">
-                      <div class="preview-thumbnail">
-                        <div class="preview-icon bg-dark rounded-circle">
-                          <i class="mdi mdi-cog text-primary"></i>
-                        </div>
-                      </div>
-                      <div class="preview-item-content">
-                        <p class="preview-subject ellipsis mb-1 text-small">Account settings</p>
-                      </div>
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item preview-item">
-                      <div class="preview-thumbnail">
-                        <div class="preview-icon bg-dark rounded-circle">
-                          <i class="mdi mdi-onepassword  text-info"></i>
-                        </div>
-                      </div>
-                      <div class="preview-item-content">
-                        <p class="preview-subject ellipsis mb-1 text-small">Change Password</p>
-                      </div>
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a href="/user_registration" class="dropdown-item preview-item">
-                      <div class="preview-thumbnail">
-                        <div class="preview-icon bg-dark rounded-circle">
-                          <i class="fa fa-plus text-success"></i>
-                        </div>
-                      </div>
-                      <div class="preview-item-content">
-                        <p class="preview-subject ellipsis mb-1 text-small">Add User</p>
-                      </div>
-                    </a>
-                  </div>
                 </div>
-              </li>
+              </div> 
+              <a href="#" id="profile-dropdown" data-bs-toggle="dropdown"><i class="mdi mdi-dots-vertical"></i></a>
+              <div class="dropdown-menu dropdown-menu-right sidebar-dropdown preview-list" aria-labelledby="profile-dropdown">
+                <a href="/account_settings" class="dropdown-item preview-item">
+                  <div class="preview-thumbnail">
+                    <div class="preview-icon bg-dark rounded-circle">
+                      <i class="mdi mdi-cog text-primary"></i>
+                    </div>
+                  </div>
+                  <div class="preview-item-content">
+                    <p class="preview-subject ellipsis mb-1 text-small">Account settings</p>
+                  </div>
+                </a>
+                <div class="dropdown-divider"></div>
+                <a href="/change_password" class="dropdown-item preview-item">
+                  <div class="preview-thumbnail">
+                    <div class="preview-icon bg-dark rounded-circle">
+                      <i class="mdi mdi-onepassword  text-info"></i>
+                    </div>
+                  </div>
+                  <div class="preview-item-content">
+                    <p class="preview-subject ellipsis mb-1 text-small">Change Password</p>
+                  </div>
+                </a>
+                <div class="dropdown-divider"></div>
+                <a href="/user_registration" class="dropdown-item preview-item">
+                  <div class="preview-thumbnail">
+                    <div class="preview-icon bg-dark rounded-circle">
+                      <i class="fa fa-plus text-success"></i>
+                    </div>
+                  </div>
+                  <div class="preview-item-content">
+                    <p class="preview-subject ellipsis mb-1 text-small">Add User</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </li>
           <li class="nav-item nav-category">
             <span class="nav-link">Navigation</span>
           </li>
@@ -198,6 +190,18 @@
                         <label for="chirpstack-api" class="col-4 col-form-label">Chirpstack API Key: </label>
                         <div class="col-7">
                           <input name="chirpstack-api" type="password" class="form-control" id="chirpstack-api" placeholder="API Key" value="{{ chirpstack_status['apikey'] }}">
+                        </div>
+                      </div>
+                      <div class="form-group row">
+                        <label for="bot_id" class="col-4 col-form-label">Telegram Bot ID</label>
+                        <div class="col-7">
+                          <input name="bot_id" type="password" class="form-control" id="bot_id" placeholder="Bot ID" value="{{ telegram_status['botId'] }}">
+                        </div>
+                      </div>
+                      <div class="form-group row">
+                        <label for="chat_id" class="col-4 col-form-label">Telegram Chat ID</label>
+                        <div class="col-7">
+                          <input name="chat_id" type="password" class="form-control" id="chat_id" placeholder="Chat ID" value="{{ telegram_status['chatId'] }}">
                         </div>
                       </div>
                       <input type="hidden" id="csrf_token" name="csrf_token">
