--- a/src/templates/error-500.html
+++ b/src/templates/error-500.html
@@ -36,7 +36,9 @@
     <meta name="theme-color" content="#ffffff">
   </head>
   <body>
-    <div class="container-scroller">
+    <div id="flash-message" data-message="{{ get_flashed_messages()[0] if get_flashed_messages() else '' }}"></div>
+      <div class="container-scroller">
+        <div class="row p-0 m-0 proBanner" id="proBanner"></div>
       <div class="container-fluid page-body-wrapper full-page-wrapper">
         <div class="content-wrapper d-flex align-items-center text-center error-page bg-info">
           <div class="row flex-grow">
