--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -35,17 +35,10 @@
     <meta name="theme-color" content="#ffffff">
   </head>
   <body>
-    <script>
-      // Get flashed messages from Flask and pass to JavaScript
-      {% with messages = get_flashed_messages() %}
-        {% if messages %}
-          const banner_alert = "{{ messages[0] }}";  // Assign first flashed message to JS variable
-        {% endif %}
-      {% endwith %}
-    </script>
-      <div class="container-scroller">
-        <div class="row p-0 m-0 proBanner" id="proBanner">
-        </div>
+    <div id="flash-message" data-message="{{ get_flashed_messages()[0] if get_flashed_messages() else '' }}"></div>
+    <div class="container-scroller">
+      <div class="row p-0 m-0 proBanner" id="proBanner">
+      </div>
         <div class="container-fluid page-body-wrapper full-page-wrapper">
           <div class="preshnam row w-100">
             <div class="image-container">
