--- a/src/templates/user_reg.html
+++ b/src/templates/user_reg.html
@@ -35,14 +35,7 @@
     <meta name="theme-color" content="#ffffff">
   </head>
   <body>
-    <script>
-      // Get flashed messages from Flask and pass to JavaScript
-      {% with messages = get_flashed_messages() %}
-        {% if messages %}
-          const banner_alert = "{{ messages[0] }}";  // Assign first flashed message to JS variable
-        {% endif %}
-      {% endwith %}
-    </script>
+    <div id="flash-message" data-message="{{ get_flashed_messages()[0] if get_flashed_messages() else '' }}"></div>
       <div class="container-scroller">
         <div class="row p-0 m-0 proBanner" id="proBanner">
         </div>
@@ -78,7 +71,7 @@
                   </div>
                 </a>
                 <div class="dropdown-divider"></div>
-                <a href="#" class="dropdown-item preview-item">
+                <a href="/change_password" class="dropdown-item preview-item">
                   <div class="preview-thumbnail">
                     <div class="preview-icon bg-dark rounded-circle">
                       <i class="mdi mdi-onepassword  text-info"></i>
