--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -40,10 +40,9 @@
       <div class="row p-0 m-0 proBanner" id="proBanner">
       </div>
         <div class="container-fluid page-body-wrapper full-page-wrapper">
-          <div class="preshnam row w-100">
+          <div class="row">
             <div class="image-container">
-              <img src="../static/assets/images/eye.png" alt="Eye Image">
-              <span class="blink-text">Argus IoT Sentinel</span>
+              <img src="../static/assets/images/title_image.png" alt="Title Image">
             </div>
             <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
               <div class="card col-lg-4 mx-auto login-card">
