--- a/src/templates/device_reg.html
+++ b/src/templates/device_reg.html
@@ -159,11 +159,15 @@
             <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
               <span class="mdi mdi-format-line-spacing"></span>
             </button>
+            <form action="/logout" method="POST" class="align-self-center ms-auto">
+              <input type="hidden" id="csrf_token" name="csrf_token">
+              <button type="submit" class="btn btn-danger">Logout</button>
+          </form>
           </div>
         </nav>
         <!-- partial -->
         <div class="main-panel">
-          <div class="content-wrapper">
+          <div class="content-wrapper no-padding">
             <div class="page-header">
               <h3 class="page-title"> Device Registration </h3>
             </div>
