config check update

--- a/src/templates/config_details.html
+++ b/src/templates/config_details.html
@@ -241,7 +241,7 @@
                   <h4>Telegram</h4>
                   <p>Connection Status: <span id="telegram_conn_status"></span></p>
               </div>
-                <button id="config-check-button">Check Configuration</button>
+                <button id="config-check-button" class="btn-primary">Check Configuration</button>
               </div>
               <div class="col-1"></div>
             </div>
